# OpenFUSIONToolkit

./: .gitignore  .gitmodules  config_cmake.sh
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml  prune_cache.yaml
docs/: 404.html  index.html
src/: CMakeLists.txt
src/base/: oft_base.F90  oft_io.F90  oft_local.F90  oft_local_c.c  oft_stitching.F90  oft_xml.F90
src/cmake/: Apple-LLVMFlang-Fortran.cmake
src/docs/: doc_thincurr_main.md  doc_tokamaker_main.md  thincurr_example1.md  thincurr_example2.md  thincurr_example3.md
src/examples/MUG/Dipole/: CMakeLists.txt  MUG_dipole.F90  MUG_dipole.h5  MUG_dipole.jou  oft.in
src/fem/: blag_operators.F90  fem_base.F90  fem_composite.F90  fem_utils.F90  h1_basis.F90  h1_operators.F90  hcurl_basis.F90  hcurl_grad_operators.F90  hcurl_operators.F90  lagrange_basis.F90  lagrange_operators.F90
src/grid/: bezier_cad.F90  hexmesh_type.F90  lagrange_poly.F90  mesh_cube.F90  mesh_cubit.F90  mesh_global.F90  mesh_global_util.F90  mesh_gmsh.F90  mesh_local.F90  mesh_native.F90  mesh_sphere.F90  mesh_t3d.F90  mesh_type.F90  multigrid.F90  multigrid_build.F90  nurbs_cad.F90  quadmesh_type.F90  tetmesh_type.F90
src/lin_alg/: lin_alg_utils.F90  native_la.F90  native_solvers.F90  oft_arpack.F90  oft_lu.F90  petsc_solvers.F90  solver_utils.F90  umfpack_bridge.c
src/physics/: CMakeLists.txt  diagnostic.F90  grad_shaf.F90  grad_shaf_fit.F90  grad_shaf_prof_phys.F90  grad_shaf_profiles.F90  grad_shaf_td.F90  grad_shaf_util.F90  gs_eq.F90  mhd_utils.F90  oft_scalar_inits.F90  oft_vector_inits.F90  xmhd.F90  (+10 more)
(+55 files in other folders)
