install(FILES oft.in DESTINATION examples/MUG/Dipole COMPONENT examples)
configure_file( oft.in ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
install(FILES oft_in.xml DESTINATION examples/MUG/Dipole COMPONENT examples)
configure_file( oft_in.xml ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
install(FILES MUG_dipole.h5 DESTINATION examples/MUG/Dipole COMPONENT examples)
configure_file( MUG_dipole.h5 ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
oft_add_exe( MUG_dipole.F90 )